tests/language_tests/pass/0141_nested_array_equality.ee
fn main() {
    println([[1], [2, true]] == [[1], [2, true]]);
    println([[1], [2, true]] == [[1], [2, false]]);
    println([1, 2] == [1, 2, 3]);
}
