tests/language_tests/fail/0082_array_negative_index.ee
fn main() {
    let values = [1, 2, 3];
    println(values[-1]);
}
